--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-
   cupertino_icons: ^1.0.8
   hexcolor: ^3.0.1
   get: ^4.7.2
@@ -24,11 +21,12 @@ dependencies:
   cloud_firestore: ^6.1.0
   permission_handler: ^12.0.1
   camera: ^0.11.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
 
@@ -37,3 +35,9 @@ flutter:
     - assets/images/
 
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/yapitalogoa.png"
+  min_sdk_android: 21
+  remove_alpha_ios: true
