--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,14 @@ dependencies:
   cloud_firestore: ^6.1.0
   permission_handler: ^12.0.1
   camera: ^0.11.3
-
+  flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
+  flutter_gemini: ^3.0.0
+  dash_chat_2: ^0.0.21
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
-  flutter_launcher_icons: ^0.13.1
+
 
 flutter:
 
@@ -35,7 +37,7 @@ flutter:
     - assets/images/
 
 
-flutter_icons:
+flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/images/yapitalogoa.png"
