--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   firebase_core: ^4.2.1
   firebase_auth: ^6.1.2
   flutter_map: ^8.2.2
+  geolocator: ^11.0.1
+  google_maps_flutter: ^2.5.0
   latlong2: ^0.9.1
   firebase_database: ^12.0.4
   cloud_firestore: ^6.1.0
@@ -24,6 +26,7 @@ dependencies:
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.13.1
   flutter_gemini: ^3.0.0
+  google_generative_ai: ^0.4.0
   dash_chat_2: ^0.0.21
 dev_dependencies:
   flutter_test:
